# rwdsim

./: .gitignore  config.ini  config.json  pyproject.toml  requirements.txt  test.py
rwdsim/: cfgutils.py  main.py  report_template.xlsx  reportutils.py  simutils.py
scripts/: generate_cohort.py  generate_report.py
src/rwdsim/: cfgutils.py  classes.py  reportutils.py  simulation.py  simutils.py
tests/: test_simutils.py
